[gd_scene load_steps=4 format=3 uid="uid://cjnkrw74xc36b"]

[ext_resource type="Script" path="res://scripts/heart_item.gd" id="1_h62ly"]
[ext_resource type="Texture2D" uid="uid://byc1fojtwn6du" path="res://Assets/heart.png" id="2_j33j0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lrw7l"]

[node name="Heart_item" type="Area2D"]
script = ExtResource("1_h62ly")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lrw7l")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_j33j0")
hframes = 3

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
